[gd_scene load_steps=10 format=3 uid="uid://b1jos7r4f40bc"]

[ext_resource type="Script" uid="uid://dt4m7cd4dlk2a" path="res://NPCs/npc.gd" id="1_0ikh5"]

[sub_resource type="Resource" id="Resource_k7mck"]
metadata/_custom_type_script = "uid://coai26ivs6uv4"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h2f5l"]
radius = 0.7338867
height = 4.8991823

[sub_resource type="SphereShape3D" id="SphereShape3D_w48l3"]
radius = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uamu8"]
shading_mode = 0
albedo_color = Color(0.849446, 5.7371853e-05, 0.6507998, 1)

[sub_resource type="BoxMesh" id="BoxMesh_uamu8"]
material = SubResource("StandardMaterial3D_uamu8")
size = Vector3(0.2, 0.2, 2)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vxakg"]
animation = &"Walking"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_k7mck"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_k5705"]
states/Walking/node = SubResource("AnimationNodeAnimation_vxakg")
states/Walking/position = Vector2(408, 103.333336)
states/walk/node = SubResource("AnimationNodeStateMachine_k7mck")
states/walk/position = Vector2(282.66666, 104.666664)

[node name="NPC" type="CharacterBody3D"]
collision_layer = 131
collision_mask = 131
floor_constant_speed = true
floor_max_angle = 1.4137167
floor_snap_length = 1.0
safe_margin = 0.056
script = ExtResource("1_0ikh5")
npc_data = SubResource("Resource_k7mck")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
process_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4855292, 0)
shape = SubResource("CapsuleShape3D_h2f5l")

[node name="ProximityDetectArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9287833, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ProximityDetectArea"]
shape = SubResource("SphereShape3D_w48l3")

[node name="LookAtNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0716, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.24999, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06482768, 2.6315293, -1.3503411)
visible = false
mesh = SubResource("BoxMesh_uamu8")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_k5705")

[connection signal="body_entered" from="ProximityDetectArea" to="." method="_on_proximity_detect_area_body_entered"]
[connection signal="body_exited" from="ProximityDetectArea" to="." method="_on_proximity_detect_area_body_exited"]
